--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.8.0"
+    "react-hot-toast": "^2.6.0",
+    "react-router-dom": "^7.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
